--- a/L01_FirstFudge/index.html
+++ b/L01_FirstFudge/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="#">
-    <script src="../FudgeCore/FudgeCore.js" defer></script>
-    <script src="Test.js" defer></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="#" />
+    <script src="../FudgeCore/FudgeCore.js"></script>
+    <script src="Test.js"></script>
     <title>L01_FirstFudge</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h1>First Fudge</h1>
+    <canvas id="viewport" style="width: 100vmin; height: 100vmin"></canvas>
+  </body>
 </html>
