added classes, added subparts

--- a/L03_SapceInvaders_cleanup/index.html
+++ b/L03_SapceInvaders_cleanup/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="#" />
     <script src="../FudgeCore/FudgeCore.js"></script>
-    <script src="Test.js"></script>
+    <script src="Invader.js"></script>
+    <script src="BarrierSubPart.js"></script>
+    <script src="Barrier.js"></script>
+    <script src="SpaceShip.js"></script>
+    <script src="Main.js"></script>
     <title>L02_SpaceInvaders</title>
   </head>
   <body
