improved class structure, added mothership and projectiles

--- a/L02_SpaceInvaders/index.html
+++ b/L02_SpaceInvaders/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="#" />
     <script src="../FudgeCore/FudgeCore.js"></script>
-    <script src="Test.js"></script>
+    <script src="../build/L02_SpaceInvaders/Test.js"></script>
     <title>L02_SpaceInvaders</title>
   </head>
   <body
