--- a/L03_SapceInvaders/index.html
+++ b/L03_SapceInvaders/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="#" />
     <script src="../FudgeCore/FudgeCore.js"></script>
-    <script src="Invader.js"></script>
-    <script src="BarrierSubPart.js"></script>
-    <script src="Barrier.js"></script>
-    <script src="SpaceShip.js"></script>
-    <script src="Main.js"></script>
+    <script src="../build/L03_SapceInvaders/QuadNode.js"></script>
+    <script src="../build/L03_SapceInvaders/Invader.js"></script>
+    <script src="../build/L03_SapceInvaders/Mothership.js"></script>
+    <script src="../build/L03_SapceInvaders/BarrierSubPart.js"></script>
+    <script src="../build/L03_SapceInvaders/Barrier.js"></script>
+    <script src="../build/L03_SapceInvaders/SpaceShip.js"></script>
+    <script src="../build/L03_SapceInvaders/Projectile.js"></script>
+    <script src="../build/L03_SapceInvaders/Main.js"></script>
     <title>L03_SpaceInvaders</title>
   </head>
   <body
