added game state

--- a/L03_SapceInvaders/index.html
+++ b/L03_SapceInvaders/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="#" />
     <script src="../FudgeCore/FudgeCore.js"></script>
+    <script src="../build/L03_SapceInvaders/GameState.js"></script>
     <script src="../build/L03_SapceInvaders/InvaderNode.js"></script>
     <script src="../build/L03_SapceInvaders/QuadNode.js"></script>
     <script src="../build/L03_SapceInvaders/Invader.js"></script>
