updated fudge version

--- a/L06_PuzzleGame/index.html
+++ b/L06_PuzzleGame/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>test</title>
+    <title>PuzzleGame</title>
     <meta charset="utf-8" />
     <!--Load FUDGE-->
     <script src="../OimoPhysics/OimoPhysics.js"></script>
