--- a/L06_PuzzleGame/index.html
+++ b/L06_PuzzleGame/index.html
@@ -6,6 +6,7 @@
     <!--Load FUDGE-->
     <script src="../OimoPhysics/OimoPhysics.js"></script>
     <script src="../FudgeCore/FudgeCore.js"></script>
+    <script src="../build/L06_PuzzleGame/Avatar.js"></script>
     <script src="../build/L06_PuzzleGame/main.js"></script>
     <!--Link stylesheet and internal resources-->
     <link rel="stylesheet" href="styles.css" />
