tried joints as hook

--- a/L06_PuzzleGame/index.html
+++ b/L06_PuzzleGame/index.html
@@ -6,11 +6,13 @@
     <!--Load FUDGE-->
     <script src="../OimoPhysics/OimoPhysics.js"></script>
     <script src="../FudgeCore/FudgeCore.js"></script>
+    <script src="../build/L06_PuzzleGame/Tools.js"></script>
     <script src="../build/L06_PuzzleGame/Prop.js"></script>
     <script src="../build/L06_PuzzleGame/SphereProp.js"></script>
     <script src="../build/L06_PuzzleGame/CubeProp.js"></script>
     <script src="../build/L06_PuzzleGame/Gravitygun.js"></script>
     <script src="../build/L06_PuzzleGame/Avatar.js"></script>
+    <script src="../build/L06_PuzzleGame/Rope.js"></script>
     <script src="../build/L06_PuzzleGame/ComponentScriptProp.js"></script>
     <script src="../build/L06_PuzzleGame/main.js"></script>
     <!--Link stylesheet and internal resources-->
