switched file structure

--- a/L06_PuzzleGame/index.html
+++ b/L06_PuzzleGame/index.html
@@ -11,6 +11,7 @@
     <script src="../build/L06_PuzzleGame/SphereProp.js"></script>
     <script src="../build/L06_PuzzleGame/CubeProp.js"></script>
     <script src="../build/L06_PuzzleGame/Gravitygun.js"></script>
+    <script src="../build/L06_PuzzleGame/ComponentScriptRope.js"></script>
     <script src="../build/L06_PuzzleGame/Avatar.js"></script>
     <script src="../build/L06_PuzzleGame/Rope.js"></script>
     <script src="../build/L06_PuzzleGame/ComponentScriptProp.js"></script>
